feat: add get category by slug feature
